<resources>
    <string name="app_name">DraftPad</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_phone_number">Username or phone number</string>
    <string name="enter_password"> password</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="brightness">Uncheck to manually change  brightness within the reader</string>
    <string name="auto">Auto</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="show_inline_comments">Show Inline Comments</string>
    <string name="display">Display Status Bar</string>
    <string name="volume_key">Turn pages and scroll using the volume keys</string>
    <string name="paging">Paging</string>
    <string name="scrolling">Scrolling</string>
    <string name="orientation">Screen Orientation</string>
    <string name="inline_comments">Inline Comments</string>
    <string name="status_bar">Status Bar</string>
    <string name="volume">Volume Key Navigation</string>
    <string name="reading_mode">Reading Mode</string>
    <string name="device_brightness">Use Device Brightness</string>
    <string name="message">Message</string>
    <string name="inbox">Inbox</string>
    <string name="new_comments">New comments on my stories</string>
    <string name="replies">Replies to my comments</string>
    <string name="others">Others</string>
    <string name="new_followers">New Followers</string>
    <string name="votes_on_my_stories">Votes on my stories</string>
    <string name="updates_from_profile">Updates from profiles I follow</string>
    <string name="application_settings">Application Settings</string>
    <string name="profile_and_account">Profile and Account Settings</string>
    <string name="read">Read</string>
    <string name="votes">Votes</string>
    <string name="parts">Parts</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="chapter">Chapter</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="no_ads">No Ads</string>
    <string name="view_comments">View more comments...</string>
    <string name="user_name">User Name</string>
    <string name="chapter_title">Title your Story Part</string>
    <string name="start_writing">Tap here to start writing</string>
    <string name="title_of_selected_book">Title of selected book</string>
    <string name="book_description">Book Description</string>
    <string name="tags">Tags</string>
    <string name="add_tags">Adding tags helps reader find your book</string>
    <string name="story_category">Story Category</string>
    <string name="edit_category">Tap here to select category</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="edit_book_cover">Edit Book Cover</string>
    <string name="welcome">WELCOME         TO         DRAFTPAD</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN UP</string>
    <string name="add_cover">Add a Cover</string>
    <string name="story_title">Story Title</string>
    <string name="story_description">Story Description</string>
    <string name="published">PUBLISHED</string>
    <string name="draft">DRAFT</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="otp">OTP</string>
    <string name="premium_1_month">1 Month              Rs.99.00/month</string>
    <string name="premium_1_year">1 Year             Rs.999.00/year</string>
    <string name="premimum_6_month">6 Months       Rs.499.00/6 months </string>
    <string name="why_are_you_reporting">Why are you reporting?</string>
    <string name="inappropriate_content">Inappropriate Content</string>
    <string name="copyright_infringement">Copyright Infringement</string>
    <string name="why_is_this_inappropriate">Why is this inappropriate</string>
    <string name="explicit_content">Explicit Content \nThis can create a negative experience</string>
    <string name="hate_and_harassment">Hate and Harassment\nThis can include bullying, hate speech and more.</string>
    <string name="violence">Violence\nThis can include the glorification of violence, media and more.</string>
    <string name="release_of_personal_information">Release of Personal Information\nThis include the sharing of identifying information such as your\n address, your image or contact information.</string>
    <string name="self_harm">Self-Harm\nThis can include texts, media and threats of self-harm and/or\n encouraging others to do the same</string>
    <string name="spam">Spam\nThis can include spam messages, unauthorized advertisement\n for goods or services unrelated to Draftpad and more.</string>
    <string name="original_owner">Are you original copyright owner of this work?</string>
    <string name="i_am_original_owner">I am the original copyright owner\nI am owner or legally authorized on behalf of the owner.</string>
    <string name="i_am_not_original_owner">I am not the original copyright owner\nI did not write this work and do not have authorization from the\ncopyright holder.</string>
    <string name="permission_required">Please provide permission</string>
    <string name="follow">Follow</string>
    <string name="works"> Works</string>
    <string name="followers"> Followers</string>
    <string name="reading_list">Reading Lists</string>
</resources>