<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout17"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.ReadingPreferencesFragment" >

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/orientation"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <RadioButton
            android:id="@+id/btnauto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto" />

        <RadioButton
            android:id="@+id/btnPortrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portrait" />

        <RadioButton
            android:id="@+id/btnLandscape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landscape" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/inline_comments"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <CheckBox
        android:id="@+id/cbComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/show_inline_comments"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/status_bar"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/cbComments" />

    <CheckBox
        android:id="@+id/cbStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/display"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/volume"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/cbStatus" />

    <CheckBox
        android:id="@+id/cbVolumeKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/volume_key"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/reading_mode"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/cbVolumeKey" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39">

        <RadioButton
            android:id="@+id/btnPaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paging" />

        <RadioButton
            android:id="@+id/btnScrolling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrolling" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/device_brightness"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <CheckBox
        android:id="@+id/cbBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/brightness"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <View
        android:id="@+id/divider9"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <View
        android:id="@+id/divider14"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbComments" />

    <View
        android:id="@+id/divider15"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbStatus" />

    <View
        android:id="@+id/divider16"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbVolumeKey" />

    <View
        android:id="@+id/divider18"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <View
        android:id="@+id/divider19"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbBrightness" />
</androidx.constraintlayout.widget.ConstraintLayout>