<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.NotificationSettingFragment" >

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/cbNewComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/replies"
        app:layout_constraintStart_toStartOf="@+id/cbNewComments"
        app:layout_constraintTop_toBottomOf="@+id/cbNewComments" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/others"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/library"
        app:layout_constraintStart_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/new_followers"
        app:layout_constraintStart_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/votes_on_my_stories"
        app:layout_constraintStart_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/updates_from_profile"
        app:layout_constraintStart_toStartOf="@+id/checkBox8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

    <View
        android:id="@+id/divider10"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbNewComments" />

    <View
        android:id="@+id/divider11"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <View
        android:id="@+id/divider12"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <View
        android:id="@+id/divider13"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkBox9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox8" />
</androidx.constraintlayout.widget.ConstraintLayout>